# bb-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yml
src/: cli.rs  client.rs  config.rs  error.rs  main.rs  models.rs  output.rs  repo.rs
src/commands/: alias.rs  api.rs  auth.rs  branch.rs  browse.rs  env.rs  extension.rs  issue.rs  key.rs  mcp.rs  mod.rs  pipeline.rs  pr.rs  pr_details.rs  repo.rs  search.rs  snippet.rs  upgrade.rs  webhook.rs  workspace.rs
