[package]
name = "bb-cli"
version = "0.2.0"
edition = "2021"
description = "Bitbucket Cloud CLI"
license = "MIT"

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
owo-colors = "4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
dirs = "5"
dialoguer = "0.11"
open = "5"
self-replace = "1"
semver = "1"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"
insta = "1"
tempfile = "3"
